# cage

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  MANIFEST.in  README.md  install.sh  justfile  pyproject.toml
cage/: __init__.py  __main__.py  adoptcmd.py  agents.py  attention.py  attribution.py  budget.py  calibration.py  capturelog.py  cfgio.py  claudewire.py  cleanup.py  cli.py  clicmds.py  cliutil.py  codexwire.py  compare.py  compress.py  constants.py  convert.py  copilotwire.py  credits.py  csvout.py  debuglog.py  demo.py  display.py  doctorbundle.py  doctorcmd.py  errors.py  estimate.py  explain.py  explain_data.py  explain_types.py  exportcmd.py  forecast.py  freshness.py  gitcommithook.py  graphifymeter.py  hooks.py  human.py  (+52 more)
docs/: README.md  agents.md  cage-claude-code-prompt-cost-impact-roadmap.md  cage-claude-code-prompt-csv-and-report-skill.md  cage-claude-code-prompt-error-handling.md  cage-claude-code-prompt-full-test-run.md  cage-claude-code-prompt-human-attention.md  cage-claude-code-prompt-manual-test-prep.md  cage-claude-code-prompt-manual-test-verify.md  cage-claude-code-prompt-meter-quota-credits.md  cage-claude-code-prompt-portable-wiring.md  cage-claude-code-prompt-pricing-management.md  cage-claude-code-prompt-renderer-foundation.md  cage-claude-code-prompt-restricted-env.md  cage-claude-code-prompt-windows-and-path-trace.md  cage-handoff-cost-impact-roadmap.md  cage-handoff-error-handling.md  cage-handoff-meter-quota-credits.md  cage-handoff-renderer-foundation.md  cage-handoff-restricted-env.md  cage-meter-competitive-lessons.md  cage-meter-modification-plan.md  cage-plan-3.6-ledger-scale.md  cage-plan.md  cage-query-concepts.handoff.md  capture-architecture.handoff.md  capture-architecture.plan.md  capture-architecture.prompt.md  claude-md-proposal-human-attention.md  claude-md-proposal-portable-wiring.md  claude-md-proposal-restricted-env.md  cli-output-spec.md  codex-removal.handoff.md  codex-removal.prompt.md  csv-output.md  debugging-capture.md  dummy-repo-test-claude-code-prompt.md  dummy-repo-test-handoff.md  (+22 more)
(+245 files in other folders)
