[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cage-flux"
dynamic = ["version"]
description = "Cage — a flux: deterministic attribution ledger for LLM token traffic and tool savings ($0, stdlib)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "arpit arya", email = "arpitarya.me@gmail.com" }]
keywords = ["llm", "cost", "tokens", "attribution", "ledger", "claude", "anthropic", "openai", "budget", "savings"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []  # stdlib only — $0, deterministic, dependency-free (see docs/cage-plan.md §1)

[project.urls]
Homepage = "https://github.com/arpitarya/cage"
Repository = "https://github.com/arpitarya/cage"
"Bug Tracker" = "https://github.com/arpitarya/cage/issues"

[project.scripts]
cage = "cage.cli:main"

[project.optional-dependencies]
# Tier 1 — local semantic response cache (plan §6). Local model only, never required.
embeddings = ["sentence-transformers>=2.2"]
# Tier 2 — learned text compressor (plan §6). Off by default; a pluggable adapter.
ml = ["sentence-transformers>=2.2"]
dev = ["pytest>=8", "build>=1.0", "twine>=5.0"]

[tool.setuptools.dynamic]
version = {attr = "cage.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["cage*"]

[tool.setuptools.package-data]
cage = ["data/policy.toml", "data/skills/**/*", "data/prompts/*", "data/steering/*", "data/shims/*", "data/assets/*"]

[tool.ruff]
line-length = 100
